--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -477,7 +477,7 @@
  ENG_Motorisation_desc:0 "In an era of rapid innovation, clinging to horse-based logistics is an anachronism we can ill-afford. Embracing motorization is not just a step forward—it's a strategic leap, aligning us with our European peers and solidifying our military supremacy."
  ENG_Pax_Britannica:0 "Continue the Pax Britannica"
  ENG_Pax_Britannica_desc:0 "The Pax Britannica was a great era, where Britain became the world's first and only Hyperpower. We conquered the Jewel of India, we punctured deep into the riches of China and we acquired large swathes of land in Africa. We did all this by staying out of Continental entanglements, so why on Earth should we get involved now?"
- eng_ww1_government_fall:0 "\n§RWith the outbreak of the Great War in Europe, the government will be in a state of political disarray.§!\n"
+ eng_ww1_government_fall:0 "§RWith the outbreak of the Great War in Europe, the government will be in a state of political disarray.§!\n"
  ENG_Intervene_Qing:0 "Intervene in the Chinese Rebellion"
  ENG_Intervene_Qing_desc:0 "The turbulence of the Chinese Nationalist revolt threatens to destabilize our concessions, bringing back haunting echoes of the Boxer Rebellion. Supporting the Emperor and his Regent becomes a strategic imperative, ensuring the stability of our interests at all costs."
  ENG_Expand_Hong_Kong:0 "Expand the Southern Concession"
@@ -4964,6 +4964,9 @@
  TUR_central_administration_in_syria:0 "Central Administration in Syria"
  TUR_central_administration_in_syria_desc:0 "Syria as a region has included some of the most important vilayets and cities for our empire, both in terms of tax revenue and legitimacy. While the importance of these vilayets has been unquestionable, there is still quite a road ahead for the region to be fully centralized."
  TUR_central_administration_in_syria_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n"
+ TUR_central_administration_in_syria_tt2:0 "§YOttoman Syria§!: [TRS_syrian_reforms_completed] Has not completed focus §YSyrian Reforms§!\n"
+ trigger_yes:0 "£trigger_yes"
+ trigger_no:0 "£trigger_no"
  TUR_entrench_rule_in_mesapotamia:0 "Entrench Rule in Mesapotamia"
  TUR_entrench_rule_in_mesapotamia_desc:0 "Mesapotamia has enjoyed some degree of autonomy after its incorporation into our empire. Yet the gradual centralization of our empire has started to integrate the region as regular vilayets, just like any other internal administrative division within our empire. As the integration process continues in our empire, so will our rule entrench in the region."
  TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
