--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2156,7 +2156,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  eng_idea_churchill_desc:0 "Former First Lord of the Admiralty and now Prime Minister, Mr. Churchill serves an excellent figurehead under His Majesty's Loyal Government."
  eng_overextension:0 "Overextension"
  eng_overextension_desc:0 "The Empire is vast and needy. We suffer from overextension as it is, and it is sure to expand very shortly."
- dervish_revolt:0 "If the §YDervish Revolt§! is not crushed before we go to war with §Y[TUR.GetName]§!, we will have to fight a §Rrevolution§!."
+ dervish_revolt:0 "If the §YDervish Revolt§! is not crushed before we go to war with §Y[TUR.GetName]§!, we will have to fight a §Rrevolution§!.\n"
  eng_possible_kenya_revolution:0 "§ROther Imperial Administrations may demand autonomy§!"
  eng_cw_big_push:0 "The Big Push"
  eng_cw_big_push_desc:0 "The Big Push! This should knock those bastards out of the war!"
