two slight localisation improvements

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -476,7 +476,7 @@
  ENG_Motorisation_desc:0 "In an era of rapid innovation, clinging to horse-based logistics is an anachronism we can ill-afford. Embracing motorization is not just a step forward—it's a strategic leap, aligning us with our European peers and solidifying our military supremacy."
  ENG_Pax_Britannica:0 "Continue the Pax Britannica"
  ENG_Pax_Britannica_desc:0 "The Pax Britannica was a great era, where Britain became the world's first and only Hyperpower. We conquered the Jewel of India, we punctured deep into the riches of China and we acquired large swathes of land in Africa. We did all this by staying out of Continental entanglements, so why on Earth should we get involved now?"
- eng_ww1_government_fall:0 "\n§RWith the outbreak of the Great War in Europe, the government will be in a state of political disarray.§!\n"
+ eng_ww1_government_fall:0 "§RWith the outbreak of the Great War in Europe, the government will be in a state of political disarray.§!\n"
  ENG_Intervene_Qing:0 "Intervene in the Chinese Rebellion"
  ENG_Intervene_Qing_desc:0 "The turbulence of the Chinese Nationalist revolt threatens to destabilize our concessions, bringing back haunting echoes of the Boxer Rebellion. Supporting the Emperor and his Regent becomes a strategic imperative, ensuring the stability of our interests at all costs."
  ENG_Expand_Hong_Kong:0 "Expand the Southern Concession"
