--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -161,7 +161,7 @@
  TUR_ingiliz_kamil:0 "İngiliz Kamil"
  TUR_non_partisan_candidate:0 "Non-Partisan Candidate"
  TUR_dignified_statesman:0 "Dignified Statesman"
- TUR_ismail_kemal_trait:0 "Representor of Minorities"
+ TUR_voice_of_minorities:0 "Voice of Minorities"
  TUR_pluralist_nationalist:0 "Pluralist Nationalist"
  TUR_pluralist_nationalist_2:0 "Pluralist Nationalist"
  TUR_conservative_nationalist:0 "Conservative Nationalist"
