*eats gouds ass*

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5005,6 +5005,7 @@ ww1_romania.10.d:0 "The PCD - formally known as the Partidul Conservator-Democra
 ww1_romania.10.a:0 "Respectfully your majesty, we'd be better without them"
 ww1_romania.10.b:0 "Alright, lets form a coalition government"
 ww1_romania.9.t:0 "Forming a New Government"
+ROM_take_ionsecu:0 "Take Ionsecu"
 ww1_romania.9.d:0 "With the failure to pass land reform, Prime Minister Brătianu has decided to resign in protest. With the king being tasked to form a new government, its been decided to give the conservative PC party a chance to govern. While being out of power for the last few years, the PC has gone through a dramatic shift. Going from a outright elitist party, the PC has seen the need to change and thus the party has rebranded itself, shifting to the left on a variety of issues including labor rights and the economy. While Carol has appointed the PC to rule, Carol is no tyrant. Thus, elections set to take place in 1911 have been announced."
 no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for our new government. These requests may restrict our ability to do certain actions, but each refusal will §Rlower§! the §CKings§! approval of our government. Once we form a government and the §cP.C§! wins the snap elections, we will be able to take domestic §YFocuses§!."
 ww1_romania.9.a:0 "Lets see how they do!"
@@ -5021,11 +5022,12 @@ ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as o
 ww1_romania.1.a:0 "The king is a very wise man"
 ww1_romania.1.b:0 "Lets hope he doesn't undermine Romanian democracy..."
 ww1_romania.2.t:0 "The Brătianu Land Reform Bill - Debate Begins"
+ww1_romania.5.a:0 "What a disaster!"
 ww1_romania.2.d:0 "Prime minister Ion Brătian and the liberal party have finally finished drafting a new land reform bill that would give more power to the majority of Romanians, and now it just needs to pass in parliament, which may be harder said then done. Conservatives of course oppose the bill, but moderates, and the king are also wary. Most likely being out of touch, they see previous measures of the government as amble enough, and see this bill as risking a Romanian brain drain. Passing this bill won't be easy, and we will need careful maneuvering to get a majority of the votes."
 ww1_romania.2.a:0 "We'll get it done!"
 ww1_romania.4.t:0 ""The Brătianu Land Reform Bill - Convincing the PCD"
 ww1_romania.4.d:0 "The current make up of Romanias parliament means that convincing moderates to support the land reform bill will be required to pass it. Several members from the PCD, a splinter from the more conservative PC, seems somewhat open to the land reform bill we've proposed. Some do fear its a bit too extreme, but changing the bill at all may risk angering the more liberal members of our party, who may protest vote against the bill. What will our next course be?"
-ROM.4.c.tt:0 "The §cPCD§! will expect us to appoint an §Yadvisor§! from thier party if we win the next elections. If we do not, they will §Cfuse§! with the opposition, leading to its owm §Rconsequences§!!"
+ROM.4.c.tt:0 "The §cPCD§! will expect us to appoint an §Yadvisor§! from thier party if we win the next elections. If we do not, they will §Cfuse§! with the opposition, leading to its own §Rconsequences§!!"
  ww1_romania.3.t:0 ""The Brătianu Land Reform Bill - Landlords Petition the Government"
  ww1_romania.3.d:0 "The all powerful landlords in Romania have protested our recent land reform bill currently being debated in parliament. Providing a variety of reasons why the bill would hurt Romanias society and economy, they've heavily encouraged us to abandon the bill all together. While they don't hold votes in parliament, their opposition to our government would hurt our position a lot, considerng their vast influence in the country"
  ww1_romania.3.a:0 "Have they forgotten about 1907 so quickly? Onwards with the bill!"
@@ -5284,6 +5286,7 @@ member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
 ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
+ROM_rightqing_thin:0 "§GAvailable§! as §YPolitical Advisor§!:\n§YAlexandru Cuza§!, which grants (Daily Proto-Fascist Support: §G+0.10§!, Daily Political Power Gain: §G+0.05§!, Consumer Goods Factories factor: §Y-5.0%§!)"
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
