--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9326,4 +9326,4 @@ ROM_king_view_approve2:0 "§7Positive§!, which gives us:\nPolitical Power Gain:
 ROM_king_view_complete_approve2:0 "§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\nBecause we've completed the focus '§YA Useful Ally§!', we're also receiving:\nPolitical Advisor Cost: §G-25%§!"
 ROM_kings_rotation:0 "Kings Rotation"
 ROM_useful_ally_focus_tt:0 "§CModifies§! the effects of the '§YKings Country§!' mechanic by the following:\n§7Positive§!: Political Advisor Cost: §G-15%§!\n§GVery Positive§!: Political Advisor Cost: §G-25%§!"
-ROM_autocomplete_ww1:0 "This focus will be bypasses once §YThe Great War§! begins."
+ROM_autocomplete_ww1:0 "This focus will be bypasses once §YThe Great War§! begins"
