--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10856,24 +10856,12 @@ serbo_bulgarian_defence_agreement:0 "Serbo-Bulgarian Defense Agreement"
 
 ###########BULGARIA FOCUS'##########
 
-BUL_the_new_macedonian_territories:0 "The New Macedonian Territories"
-BUL_the_new_macedonian_territories_desc:0 "a"
-BUL_cossack_coaching:0 "Cossack Coaching"
-BUL_cossack_coaching_desc:0 "The White Army's cavalry has proven to be very effective from Prussia to Galacia, from the Caucuses to Manchuria, we require Brusilov's brilliance."
 BUL_coal_mining_yields:0 "Coal Mining Yields"
 BUL_coal_mining_yields_desc:0 "a"
 BUL_the_new_tsardom:0 "The New Tsardom"
 BUL_the_new_tsardom_desc:0 "The glorious Bulgarian Tsardom has been birthed quite recently, just in 1908! we must establish our place in the world and prove our glory!"
-BUL_fuel_militarization:0 "Fuel Militarization"
-BUL_fuel_militarization_desc:0 "The only we we can liberate our people, and prove ourselves to the world, is by growing a grand army!"
-BUL_amending_the_tarnovo_constitution:0 "Amending the Tarnovo Constitution"
-BUL_amending_the_tarnovo_constitution_desc:0 "In order to guarantee our young nation's success we must decide how much power the Tsar has and replace the word "prince" with "Tsar" in the constitution. We are also closing the Ministry of Trade and Agriculture in favor of the Ministry of Agriculture and State Property."
-BUL_the_bulgarian_army:0 "The Bulgarian Army"
-BUL_the_bulgarian_army_desc:0 "We must maintain and direct our proud army!"
 BUL_negotiations_with_serbia:0 "Negotiations with Serbia"
 BUL_negotiations_with_serbia_desc:0 "We could possibly use the Serb's help in our anti-Ottoman Crusade, defense against the Habsburgs and organizing Macedonia, though we are being very generous by extending the olive branch..."
-BUL_flying_ferdinand:0 "Flying Ferdinand"
-BUL_flying_ferdinand_desc:0 "f"
 BUL_arrival_of_the_industrial_revolution:0 "Arrival of the Industrial Revolution"
 BUL_arrival_of_the_industrial_revolution_desc:0 "q"
 BUL_authorize_arms_purchases:0 "Authorize Arms Purchases"
@@ -10882,16 +10870,12 @@ BUL_encourage_foreign_investments:0 "Encourage Foreign Investments"
 BUL_encourage_foreign_investments_desc:0 "To help kickstart our economy we should reach out to the major powers of Europe for capital."
 BUL_strengthen_economic_ties_to_germany:0 "Strengthen Economic Ties to Germany"
 BUL_strengthen_economic_ties_to_germany_desc:0 "We can utilize the German heavy industries in our upcoming struggles in the Balkans...."
-BUL_replace_prime_minister_malinov:0 "Replace Prime Minister Malinov"
-BUL_replace_prime_minister_malinov_desc:0 "Prime Minister Malinov is the current prime minister and leads a rusophile faction. In order to  secure a prestigious Bulgaria he needs to go. Ivan Evstratiev Geshov will make a suitable replacement."
 BUL_successful_negotiations:0 "Successful Negotiations"
 BUL_successful_negotiations_desc:0 "We've successfully negotiated a Balkan League with Serbia, though we have left some details vague..."
 BUL_failed_negotiations:0 "Failed Negotiations"
 BUL_failed_negotiations_desc:0 "Those dirty Serbs wouldn't submit to our terms! We don't need them anyway..."
 BUL_strengthen_economic_ties_to_russia:0 "Strengthen Economic Ties to Russia"
 BUL_strengthen_economic_ties_to_russia_desc:0 "We've relied on the Russian economy previosely, makes no since to change it now, especially since we can thank the Russians for our independence and we have common enemies and religion."
-BUL_antiottoman_diplomacy:0 "Anti-Ottoman Diplomacy"
-BUL_antiottoman_diplomacy_desc:0 "We've been subjugated by the Ottomans for centuries, it's too late to amend relations."
 BUL_lozengradska_operacija:0 "Lozengradska Operacija"
 BUL_lozengradska_operacija_desc:0 "Taking the Lozengrad path will lead us to Constantinople, but it's heavily fortified... We must prepare for battle!"
 BUL_the_macedonian_question:0 "The Macedonian Question"
@@ -10944,8 +10928,6 @@ BUL_balkan_league_victory:0 "Balkan League Victory"
 BUL_balkan_league_victory_desc:0 "The Balkan League has been victorious in beating the Ottomans! Huzzah! Centuries of Occupation finally ended! But now we must sort out our allies..."
 BUL_negotiate_italian_influence:0 "Negotiate Italian Influence"
 BUL_negotiate_italian_influence_desc:0 "Italy has already solidified there claims on Ottoman Libya, but if we were to offer them a position in Albania they surely could not decline..."
-BUL_introduction_of_proportional_representation:0 "Introduction of Proportional Representation"
-BUL_introduction_of_proportional_representation_desc:0 "Proportional representation refers to any type of electoral system under which subgroups of an electorate are reflected proportionately in the elected body. The concept applies mainly to political divisions (political parties) among voters. The essence of such systems is that all votes cast – or almost all votes cast – contribute to the result and are effectively used to help elect someone. Under other election systems, a bare plurality or a scant majority are all that are used to elect candidates. Further, a PR system is one that produces mixed and balanced representation, reflecting how votes are cast."
 BUL_lone_victor:0 "Lone Victor"
 BUL_lone_victor_desc:0 "We alone have stabbed the blade of liberation into the Sultan's heart. We don't need anyone's help and we will not be confined to anyone else's rules!"
 BUL_bulgarian_lead_crusade_victory:0 "Bulgarian Lead Crusade Victory"
@@ -10984,6 +10966,8 @@ BUL_electricity_works:0 "Electricity Works"
 BUL_electricity_works_desc:0 "a"
 BUL_fund_the_bdz:0 "Fund The BDZ"
 BUL_fund_the_bdz_desc:0 "The BDZ is the national rail company. In order to maximize our industry and agriculture markets we must give the BDZ any funding they need."
+BUL_antiottoman_diplomacy:0 "Anti-Ottoman Diplomacy"
+BUL_antiottoman_diplomacy_desc:0 "We've been subjected to occupation for far too long by the wretched Ottoman Turks! It's time to flip the tables! Смърт за султана!"
 BUL_introduce_arms_factories:0 "Introduce Arms Factories"
 BUL_introduce_arms_factories_desc:0 "a"
 BUL_intensify_train_manufacturing:0 "Intensify Train Manufacturing"
@@ -10992,44 +10976,6 @@ BUL_our_first_naval_battle:0 "Our First Naval Battle"
 BUL_our_first_naval_battle_desc:0 "Though our navy was established in January 1899, however we've yet to see our action.... yet..."
 BUL_christianity_only:0 "Christianity Only"
 BUL_christianity_only_desc:0 "Bulgaria is a christian country! We've been to long oppressed by islam, it's time to turn on the offensive, and please don't even mention jews... yuck... We must amend the Constitution to fit our sentiments..."
-BUL_suppress_criticism:0 "Suppress Criticism"
-BUL_suppress_criticism_desc:0 "We must'nt question the Tsar, he knows best, our lack luster results in the Macedonia struggle we're all apart of the plan... trust the Tsar"
-BUL_allow_freedom_of_the_press:0 "Allow Freedom of the Press"
-BUL_allow_freedom_of_the_press_desc:0 "Criticism to our loss is a natural process, we need to preserve freedom rather than the Tsar's dignity."
-BUL_army_cutbacks:0 "Army Cutbacks"
-BUL_army_cutbacks_desc:0 "We must remember our civilians are just as if not more important than our armed forces... though this does come at the cost of our generals approval..."
-BUL_professional_army:0 "Professional Army"
-BUL_professional_army_desc:0 "In order to establish ourselves as a respectable world power we need a professional army, that is appealing as a career even if it's costly..."
-BUL_broad_army:0 "Broad Army"
-BUL_broad_army_desc:0 "As long as we have men with guns we'll win, just give him a gun and send him out, he'll be fine..... right?"
-BUL_reflecting_upon_the_balkan_war_experience:0 "Reflecting Upon The Balkan War Experience"
-BUL_reflecting_upon_the_balkan_war_experience_desc:0 "It is apparent that new type of war is upon us, one where machinery and technology is more useful than men..."
-BUL_cavalry_prerogative:0 "Cavalry Prerogative"
-BUL_cavalry_prerogative_desc:0 "Equestrian Warfare is far superior than infantry, our proud cavalry will lead the battle and capture our enemy's capital before they can even announce to the public that they're at war!"
-BUL_infantry_precendence:0 "Infantry Precendence"
-BUL_infantry_precendence_desc:0 "Ever since Adam and Eve man has proven themselves to be the best tool in war, horses are nice but what we need is a reliable force that'll get the job done."
-BUL_superiority_of_numbers:0 "Superiority of Numbers"
-BUL_superiority_of_numbers_desc:0 "If we flood the battlefield with expendables we will overrun our enemies and achieve victory..."
-BUL_superiority_of_arms:0 "Superiority of Arms"
-BUL_superiority_of_arms_desc:0 "Bullets and shells are much cheaper than men..."
-BUL_stormtrooper_schooling:0 "Stormtrooper Schooling"
-BUL_stormtrooper_schooling_desc:0 "The Kaiser's stormtroopers have proven themselves to be the most effective force in the world, we need our own..."
-BUL_macedonian_mountain_maneuvers:0 "Macedonian Mountain Maneuvers"
-BUL_macedonian_mountain_maneuvers_desc:0 "Our Macedonian territory is very mountainous, we need to adapt and excel in every field..."
-BUL_trench_engineering:0 "Trench Engineering"
-BUL_trench_engineering_desc:0 "Trench warfare is the new standard for battle, we must learn and adapt quickly to have an edge over our enemies..."
-BUL_long_term_trenches:0 "Long Term Trenches"
-BUL_long_term_trenches_desc:0 "The Great War will be a long and bloody one, we must dig in and make the trenches a home away from home for our soldiers..."
-BUL_shortterm_trenches:0 "Short-Term Trenches"
-BUL_shortterm_trenches_desc:0 "We can't afford nor risk a lengthy conflict, we need temporary trenches to due their simple job and win quickly..."
-BUL_mt_olympus_joint_exercises:0 "Mt. Olympus Joint Exercises"
-BUL_mt_olympus_joint_exercises_desc:0 "To strengthen the armies of Orthodoxy we need to work together and be on the same page when we enter battle together in the summits..."
-BUL_experimental_methods:0 "Experimental Methods"
-BUL_experimental_methods_desc:0 "It's no longer the reign of Victory, a new type of warfare is upon us, one lead by machinery so evil God is either ignorant of the horrors taking place in his kingdom or either too impotent to stop them..."
-BUL_traditional_methods:0 "Traditional Methods"
-BUL_traditional_methods_desc:0 "Change is scary and risky, we best stick to what we know works..."
-BUL_carrier_pigeons:0 "Carrier Pigeons"
-BUL_carrier_pigeons_desc:0 "a"
 BUL_realize_the_yield_of_agrarianism:0 "Realize the Yield of Agrarianism"
 BUL_realize_the_yield_of_agrarianism_desc:0 "a"
 BUL_industrial_priority:0 "Industrial Priority"
@@ -11044,10 +10990,6 @@ BUL_russian_funded_black_sea_dockyards:0 "Russian Funded Black Sea Dockyards"
 BUL_russian_funded_black_sea_dockyards_desc:0 "a"
 BUL_german_urban_planners:0 "German Urban Planners"
 BUL_german_urban_planners_desc:0 "a"
-BUL_moscow_maneuvers:0 "Moscow Maneuvers"
-BUL_moscow_maneuvers_desc:0 "a"
-BUL_prussian_drillilng:0 "Prussian Drillilng"
-BUL_prussian_drillilng_desc:0 "a"
 BUL_question_of_ownership:0 "Question of Ownership"
 BUL_question_of_ownership_desc:0 "a"
 BUL_invite_mauser:0 "Invite Mauser"
@@ -11106,5 +11048,15 @@ BUL_agrarian_dream:0 "Agrarian Dream"
 BUL_agrarian_dream_desc:0 "a"
 BUL_force_the_farmers_into_factories:0 "Force The Farmers into Factories"
 BUL_force_the_farmers_into_factories_desc:0 "a"
-
-    
+BUL_expanding_international_relations:0 "Expanding International Relations"
+BUL_expanding_international_relations_desc:0 "Though we are in the corner of the Balkans, we have some grand opportunity to build alliances. We should approach the Great Powers..."
+BUL_appoint_geshov:0 "Appoint Geshov"
+BUL_appoint_geshov_desc:0 "Prime Minister Aleksandar Malinov isn't a terrible prime minister, but his minister-ship has been unremarkable and fueled by Russophilia. Ivan Geshov would be more appropriate in order to form our anti-Ottoman crusade that we desire..."
+BUL_introduction_of_proportional_representation:0 "Introduction of Proportional Representation"
+BUL_introduction_of_proportional_representation_desc:0 "Proportional representation refers to any type of electoral system under which subgroups of an electorate are reflected proportionately in the elected body. The concept applies mainly to political divisions (political parties) among voters. The essence of such systems is that all votes cast – or almost all votes cast – contribute to the result and are effectively used to help elect someone. Under other election systems, a bare plurality or a scant majority are all that are used to elect candidates. Further, a PR system is one that produces mixed and balanced representation, reflecting how votes are cast."
+BUL_amending_the_tarnovo_constitution:0 "Amending the Tarnovo Constitution"
+BUL_amending_the_tarnovo_constitution_desc:0 "a"
+BUL_promote_the_tsarkaiser_relationship:0 "Promote the Tsar-Kaiser Relationship"
+BUL_promote_the_tsarkaiser_relationship_desc:0 "We've enjoyed our relationship with both Kaiser Wilhelm, Ferdinand's cousin and Kaiser Franz Joseph. We have much opportunity with the Triple Alliance, and we share an anti-Serbian sentiment! Awesome!"
+BUL_our_slavic_godfather:0 "Our Slavic Godfather"
+BUL_our_slavic_godfather_desc:0 "Russia are not only our Slavic Godfather, quite literally for Boris III, they are our greatest supporter 
