--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5208,7 +5208,7 @@ ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has h
 ROM_reach_out_to_the_industrialists:0 "Reach Out to the Industrialists"
 ROM_reach_out_to_the_industrialists_desc:0 ""
 
-ROM_romanian_army:0 "The Romanian Army"
+ROM_romanian_army:0 "The Coming Storm"
 ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
 ROM_lessons_from_prussian:0 "Lessons from the Prussians"
 ROM_lessons_from_prussian_desc:0 ""
