syria jewish focus

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5748,6 +5748,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  
+ TRS_give_citizenship_to_jews:0 "Give Citizenship to Jews"
+ TRS_give_citizenship_to_jews_desc:0 "Numerous Jews living within our empire are not a citizen of our empire. In an effort to integrate Jews in our empire, we can offer jews Ottoman citizenship."
  TRS_arabist_movement:0 "Arabist Movement"
  TRS_arabist_movement_desc:0 "[TRS_arabist_movement_desc]"
  TUR_has_naval_blockade:0 "Has national spirit §YNaval Blockade§!\n"
