--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5062,7 +5062,10 @@
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
 
- TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£political_advisor_cost_texticon  Political Advisor Cost: §G-25%§!\n\n"
+ TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£command_power_texticon  Daily Command Power Gain Multiplier: §G+10%§!\n\n"
+ TUR_rewarding_loyalties_tt:0 "Modify §YCemâl's Syria§! by\n£political_advisor_cost_texticon  Political Advisor Cost: §G-25%§!\n\n"
+ TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
+ TUR_integrate_jewish_colonies_tt2:0 "Unlocks £decision_icon_small  §YGive Citizenship to Jews§! Decisions.\n"
  diplomatic_incident:0 "Diplomatic Incident"
  TRS_arab_opposition_no_effect:0 "§YArab Opposition§! has negative modifiers on our nation\n"
  TRS_add_1_oppression_justification_for_every_major_at_war:0 "Adds §Y1§! Oppression Justification for every §Ymajor§! we're at §Ywar§! with."
@@ -5095,7 +5098,7 @@
  TUR_desert_training_tt:0 "Modify §YOttoman 4th Army§! by\n£attrition_hot_texticon  Heat Attrition: §G-10.00%§!\n£training_speed_texticon  Training time: §G-5.00%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\n"
  TUR_increased_garrisons:0 "Increased Garrisons"
  TUR_increased_garrisons_desc:0 "While Syria is an integral inseparable part of our empire, it's far from an ideal province. To avoid getting stabbed in the back, we have to increase local garrisons and keep our backs safe."
- TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\n"
+ TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+15%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §G-10%§!\n£garrison_texticon  Required Garrisons: §R+5%§!\n\n"
  TUR_form_yildirim_army_group:0 "From Yıldırım Army Group"
  TUR_form_yildirim_army_group_desc:0 "Ottoman 4th army command is not sufficient at fulfilling its duties. As military situation at the front worsenes due to this reason, it'd be best to dissolve Ottoman 4th army and establish Yıldırım army goup in its place."
  TUR_form_yildirim_army_group_tt:0 "Modify §YOttoman 4th Army§! by\n£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
