--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5207,8 +5207,9 @@ ROM_center_consensus:0 "The Consensus of The Center"
 ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
 ROM_reach_out_to_the_industrialists:0 "Reach Out to the Industrialists"
 ROM_reach_out_to_the_industrialists_desc:0 ""
-
+ROM_arfocus:0 "We will eventually be able to core §YNorthern Dobruja§! through this decision."
 ROM_romanian_army:0 "The Coming Storm"
+ROM_revanchism:0 "Revanchism"
 ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
 ROM_lessons_from_prussian:0 "Lessons from the Prussians"
 ROM_lessons_from_prussian_desc:0 ""
