--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5074,6 +5074,16 @@ ww1_romania.22.a:0 "We'll shut dowm this corrupt court soon enough!"
 ww1_romania.21.t:0 "Shutting Down the Tramcar Society"
 ww1_romania.21.d:0 "The PNL is famously corrupt, corrupt to the core. We are better safer then sorry on the issue of corruption, and thus we must be vigilant. The 'Tramcar Society' has openly supported the PNL multiple times, and there are many rumors that they have illegally embezzled money for the PNL. Thus, we shall forefully dissolve this corrupt institution."
 ww1_romania.21.a:0 "Good! We must continue actions like this"
+ww1_romania.29.t:0 "An Oppurtunity"
+ww1_romania.29.a:0 "Join"
+ww1_romania.30.t:0 "Anglo-Italian Banks Withdraw"
+ww1_romania.30.a:0 "Whatever"
+ww1_romania.31.t:0 "French Industrial Support Withdrawn"
+ww1_romania.31.a:0 "Whatever"
+ww1_romania.32.t:0 "French Weapon Support Withdrawn"
+ww1_romania.32.a:0 "Whatever"
+ROM_french_industry_support_withdrawn.tt:0 "We will §Rlose§! the civilian factory from the focus "§YFrench Industrial Support§!""
+ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!"
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
