better tooltip for ottoman syria

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5804,7 +5804,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_raise_bedouin_volunteers_desc:0 "As we've already secured support from the Bedouins, we can expand our support in other states."
  TUR_disband_bedouin_volunteers:0 "Disband Bedouin Volunteers"
  TUR_disband_bedouin_volunteers_desc:0 "Though we've previously alligned with the Bedouin volunteers, they pose a threat to the centralization of our state. Since they're no longer of use to us, we can disband them and revoke their privilages."
- TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n"
+ TUR_disband_bedouin_volunteers_tt:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n\n"
  TUR_boost_egyptian_opposition:0 "Boost Egyptian Opposition"
  TUR_boost_egyptian_opposition_desc:0 "Egyptian population and aristocracy for the most part still stands loyal to the Ottoman Caliph and Pan-Islamist ideals. As we're embroiled in a war with them, we can stir up the Egyptian opposition to sabotage the war effort of our enemies."
  TUR_contact_with_the_national_party:0 "Contact with the National Party"
