--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4608,6 +4608,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.23.a:0 "Traitors on all fronts."
  ottoman_syria.23.b:0 "For a free Syria!"
  ottoman_syria.23.c:0 "What will happen to the Ottoman realm."
+ ottoman_syria.24.t:0 "The Arabist Movement"
+ ottoman_syria.24.d:0 "Nationalist movements spread from France has eventually found its way to the shores of our empire. Alongside several nationalist movements in our Balkan holdings, a new Turkish intellectual class, inspired from nationalism, decided to start their own national revival. Against this new nationalist Turkification policies of the empire, many notable Arab thinkers and political figures kickstarted their own movement. Generalized as the "Arabist Movement", the new movement seeks autonomy or in some cases outright independence from the Turkish empire."
+ ottoman_syria.24.a:0 "No subject of the empire shall break free."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
